small addition in test case

--- a/Phase3/Project2/tasks.json
+++ b/Phase3/Project2/tasks.json
@@ -1,1 +1,1 @@
-[{"eid":"12233","id":"101","name":"Train","deadline":"2021-08-31"},{"eid":"12233","id":"103","name":"Train","deadline":"2021-09-01"},{"eid":"12233","id":"104","name":"Something Cool","deadline":"2021-09-04"}]
+[{"eid":"12233","id":"101","name":"Train","deadline":"2021-08-31"},{"eid":"12233","id":"103","name":"Train","deadline":"2021-09-01"},{"eid":"12233","id":"104","name":"Something Cool","deadline":"2021-09-04"},{"eid":"12233","id":"105","name":"Take a Break","deadline":"2021-09-02"}]
